[package]
name = "sample-test"
version = "0.1.0"
license = "Apache-2.0"
description = "Sampling strategies and machinery for testing arbitrary data"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["sample-std", "sample-test-macros", "sample-arrow2"]

[dependencies]
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }
quickcheck="1.0"
sample-std = { path = "sample-std" }
sample-test-macros = { path = "sample-test-macros" }

[dev-dependencies]
once_cell = "1.0"

[features]
use_logging = ["dep:log", "dep:env_logger"]
