[package]
name = "sample-test"
description = "Sampling strategies and machinery for testing arbitrary data"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["sample-std", "sample-test-macros", "sample-arrow2"]

[workspace.dependencies]
sample-test = { path = ".", version = "0.1" }
sample-std = { path = "sample-std", version = "0.1" }
sample-test-macros = { path = "sample-test-macros", version = "0.1" }

[workspace.package]
version = "0.1.1"
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }
quickcheck="1.0"
sample-std = { workspace = true }
sample-test-macros = { workspace = true }

[dev-dependencies]
once_cell = "1.0"

[features]
use_logging = ["dep:log", "dep:env_logger"]
