[package]
name = "sample-arrow2"
version = "0.1.0"
license = "Apache-2.0"
description = "Samplers for arrow2 for use with sample-test"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sample-std = { path = "../sample-std" }
arrow2 = "0.17"

[dev-dependencies]
quickcheck="1.0"
sample-test = { path = ".." }
lazy_static = "1.4"
