[package]
name = "sample-arrow2"
description = "Samplers for arrow2 for use with sample-test"
version = "0.17.0"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sample-std = { workspace = true }
arrow2 = "0.17"

[dev-dependencies]
quickcheck="1.0"
sample-test = { workspace = true }
lazy_static = "1.4"
