[package]
name = "sample-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickcheck="1.0"
rand = { version = "0.8", default-features = false, features = ["getrandom", "small_rng", "alloc"] }
rand_regex = { version = "0.15" }
regex = "1.8"

[dev-dependencies]
sample-test = { path = "..",  version = "0.1.0" }
