[package]
name = "sample-std"
description = "Sampler definitions and implementations for st"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickcheck="1.0"
rand = { version = "0.8", default-features = false, features = ["getrandom", "small_rng", "alloc"] }
rand_regex = { version = "0.15" }
regex = "1.8"
casey = "0.4"

[dev-dependencies]
once_cell = "1.0"
sample-test = { workspace = true }
