[package]
name = "sample-test-macros"
description = "proc-macros used by sample-test"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true}

[lib]
name = "sample_test_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
sample-std = { workspace = true }
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
once_cell = "1.0"
lazy_static = "1.4"
sample-test = { workspace = true }
